# brc

./: .gitignore  Cargo.toml  pgo.sh
src/: bench.rs  buffered_reader.rs  data.rs  fast_hash.rs  main.rs  memory_mapped.rs  processing.rs
