cargo-features = ["profile-rustflags"]

[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.8"

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3", "const_xxh3"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
debug = 1
rustflags = ["-C", "target-cpu=native"]
