cargo-features = ["profile-rustflags"]

[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[dependencies]
memchr = "2.7.6"
memmap2 = "0.9.8"
rapidhash = "4.2.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
debug = 1
rustflags = ["-C", "target-cpu=native"]
overflow-checks = false

